# T_automake

./: .gitignore  Makefile.am  README.md  autogen.sh  clean.sh  configure.ac
examples/: Makefile.am
man/: Makefile.am
scripts/: Makefile.am  script1.sh  script2.sh
src/: Makefile.am  client.c  server.c
